# fastapi_p8_group

./: .gitignore  Makefile  TODO  config.py  main.py  pyproject.toml  setup.cfg  test_main.http
apps/: authentication.py  forms.py  hashing.py  models.py  schemas.py  utils.py
apps/api/: universities.py
apps/routes/: __init__.py  auth.py  post.py  universities.py  user.py
apps/services/: __init__.py  auth.py  post.py  user.py
apps/tests/: conftest.py  test_users.py
apps/utils/: generate.py  send_email.py  send_reset_password_email.py  send_sms.py  token.py
celery_tasks/: email.py  tasks.py
config/: .env  authentication.py  celery_config.py  celery_utils.py  db.py  es_connector.py  settings.py
