[tool.poetry]
name = "march-23-homework"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "march_23_homework"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
python-dotenv = "^1.0.0"
sqlalchemy = "^2.0.7"
psycopg2-binary = "^2.9.5"
passlib = "^1.7.4"
bcrypt = "^4.0.1"
jwt = "^1.3.1"
python-jose = "^3.3.0"
python-multipart = "^0.0.6"
pyproject-toml = "^0.0.10"
faker = "^18.3.1"
celery = "^5.2.7"
redis = "^4.5.3"
flower = "^1.2.0"
isort = {extras = ["pipfile-deprecated-finder", "requirements-deprecated-finder"], version = "^5.12.0"}
ujson = "^5.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
